styles: Ensure #loop-list doesn't use center aligned text

--- a/web115/styles/styles.css
+++ b/web115/styles/styles.css
@@ -236,6 +236,10 @@ ul li {
   margin-bottom: 5px;
 }
 
+#loop-list {
+  text-align: left;
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
 }
